# crwl-docs

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
scripts/: crawl_to_markdown.py
src/crawler4ai/: __init__.py  cli.py  core.py
tests/: test_cli.py  test_core.py
